Devops-script/prod/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: login-backend
  namespace: login-app

spec:
  type: ClusterIP

  selector:
    app: login-backend

  ports:
    - name: http
      port: 5000
      targetPort: http
      protocol: TCP
